figuring out bootstrap

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,3 +1,15 @@
-.jumbotron
+.jumbotron.home-jumbotron
   .container
     %h1= "Welcome to Home."
+    #p= "Some text."
+.container
+  .row
+    .col
+      %h3= "Cool stuff"
+      #p= "some text1"
+    .col
+      %h3= "Cool stuff"
+      #p= "some text2"
+    .col
+      %h3= "Cool stuff"
+      #p= "some text2"
