--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-toggleable-md.navbar-inverse.bg-inverse.fixed-top
+%nav.navbar.navbar-toggleable-md.navbar-inverse.bg-inverse
   .container
     %ul.navbar-nav.mr-auto
       %li.nav-item= link_to 'Home', root_url, class: "nav-link"
