--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -3,3 +3,6 @@
     %ul.navbar-nav.mr-auto
       %li.nav-item= link_to 'Home', root_url, class: "nav-link"
       %li.nav-item= link_to 'Support', static_pages_support_url, class: "nav-link"
+    %ul.navbar-nav
+      %li.nav-item= link_to 'Login', static_pages_support_url, class: "nav-link"
+      %li.nav-item= link_to 'Signup', static_pages_support_url, class: "nav-link"
