--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,6 @@
 .home-jumbotron{
   background: url('https://s3.ca-central-1.amazonaws.com/photoapp-media/site-media/dog-jumbotron.jpg');
+  background-position: center;
   border-radius: 0px;
   color:#fff;
 }
