--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,15 +1,17 @@
 .jumbotron.home-jumbotron
   .container
     %h1= "Welcome to Home."
-    #p= "Some text."
+    %p= "Some text. A brief description of the things"
+    %p= "One day a search box will go here, and it will be glorious."
+    %h3= "Other stuff"
 .container
   .row
     .col
       %h3= "Cool stuff"
-      #p= "some text1"
+      %p= "some text1"
     .col
       %h3= "Cool stuff"
-      #p= "some text2"
+      %p= "some text2"
     .col
       %h3= "Cool stuff"
-      #p= "some text2"
+      %p= "some text2"
