--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,7 +2,7 @@
   .container
     %ul.navbar-nav.mr-auto
       %li.nav-item= link_to 'Home', root_url, class: "nav-link"
-      %li.nav-item= link_to 'Support', static_pages_support_url, class: "nav-link"
+      %li.nav-item= link_to 'Support', support_path, class: "nav-link"
     %ul.navbar-nav
-      %li.nav-item= link_to 'Login', static_pages_support_url, class: "nav-link"
-      %li.nav-item= link_to 'Signup', static_pages_support_url, class: "nav-link"
+      %li.nav-item= link_to 'Login', support_path, class: "nav-link"
+      %li.nav-item= link_to 'Signup', new_user_path, class: "nav-link"
