--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,5 @@
-.container
-  = gravatar_for @user
-  = @user.name
-  = @user.email
+.row
+  .col-md-4
+    = gravatar_for @user
+    = @user.name
+    = @user.email
