--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,12 @@
 
   <body>
     <%= render 'layouts/navigation' %>
-    <%= yield %>
+    <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>" role="alert"><%= message %></div>
+      <% end %>
+      <%= yield %>
+    </div>
     <%= render 'layouts/footer' %>
     <%= debug(params) if Rails.env.development? %>
   </body>
