--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,17 +1,14 @@
 .jumbotron.home-jumbotron
   .container
-    %h1= "Welcome to Home."
-    %p= "Some text. A brief description of the things"
-    %p= "One day a search box will go here, and it will be glorious."
-    %h3= "Other stuff"
+    %h1.display-3 Welcome to Home.
 .container
   .row
-    .col
-      %h3= "Cool stuff"
-      %p= "some text1"
-    .col
-      %h3= "Cool stuff"
-      %p= "some text2"
-    .col
-      %h3= "Cool stuff"
-      %p= "some text2"
+    .col-sm
+      %i(class="fa fa-camera-retro" aria-hidden="true")
+      %p Share, organize, and distrubute albums and photo's to clients.
+    .col-sm
+      %i(class="fa fa-folder-open" aria-hidden="true")
+      %p some text2
+    .col-sm
+      %h3 Cool stuff
+      %p some text2
