--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,6 @@
-.row
-  .col-md-4
-    = gravatar_for @user
-    = @user.name
-    = @user.email
+.container
+  .row
+    .col-md-4
+      = gravatar_for @user
+      = @user.name
+      = @user.email
