--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -9,6 +9,7 @@
           %a(href= "#" class = "nav-link dropdown-toggle" id = "navbarDropdownMenuLink" data-toggle = "dropdown") Account
           .dropdown-menu
             = link_to 'Profile', current_user, class: "dropdown-item"
+            = link_to 'Settings', edit_user_path(current_user), class: "dropdown-item"
             = link_to 'Logout', logout_path, method: :delete, class: "dropdown-item"
       - else
         %li.nav-item= link_to 'Login', login_path, class: "nav-link"
