--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,7 +17,7 @@ textarea {
 }
 
 .home-jumbotron{
-  background: url('https://s3.ca-central-1.amazonaws.com/photoapp-media/site-media/dog-jumbotron.jpg');
+  background: #aaa;
   background-position: center;
   border-radius: 0px;
   color:#fff;
